K8sInfra/Longhorn/Namespace.yaml
############################
# @author EliasDH Team     #
# @see https://eliasdh.com #
# @since 01/01/2025        #
############################
---
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  labels:
    name: longhorn
    app: longhorn
    owner: EliasDH
    environment: production
  annotations:
    description: This namespace is used for the longhorn application.
    contact: info@eliasdh.com
---
