K8sInfra/Longhorn/DaemonSet.yaml
############################
# @author EliasDH Team     #
# @see https://eliasdh.com #
# @since 01/01/2025        #
############################
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/version: v1.7.2
    app: longhorn-manager
  name: longhorn-manager
  namespace: longhorn-system
spec:
  selector:
    matchLabels:
      app: longhorn-manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: longhorn
        app.kubernetes.io/instance: longhorn
        app.kubernetes.io/version: v1.7.2
        app: longhorn-manager
    spec:
      containers:
        - name: longhorn-manager
          image: longhornio/longhorn-manager:v1.7.2
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          command:
            - longhorn-manager
            - -d
            - daemon
            - --engine-image
            - "longhornio/longhorn-engine:v1.7.2"
            - --instance-manager-image
            - "longhornio/longhorn-instance-manager:v1.7.2"
            - --share-manager-image
            - "longhornio/longhorn-share-manager:v1.7.2"
            - --backing-image-manager-image
            - "longhornio/backing-image-manager:v1.7.2"
            - --support-bundle-manager-image
            - "longhornio/support-bundle-kit:v0.0.45"
            - --manager-image
            - "longhornio/longhorn-manager:v1.7.2"
            - --service-account
            - longhorn-service-account
            - --upgrade-version-check
          ports:
            - containerPort: 9500
              name: manager
            - containerPort: 9501
              name: conversion-wh
            - containerPort: 9502
              name: admission-wh
            - containerPort: 9503
              name: recov-backend
          readinessProbe:
            httpGet:
              path: /v1/healthz
              port: 9501
              scheme: HTTPS
          volumeMounts:
          - name: boot
            mountPath: /host/boot/
          - name: dev
            mountPath: /host/dev/
          - name: proc
            mountPath: /host/proc/
          - name: longhorn
            mountPath: /var/lib/longhorn/
            mountPropagation: Bidirectional
          - name: longhorn-grpc-tls
            mountPath: /tls-files/
        - name: pre-pull-share-manager-image
          imagePullPolicy: IfNotPresent
          image: longhornio/longhorn-share-manager:v1.7.2
          command: ["sh", "-c", "echo share-manager image pulled && sleep infinity"]
      volumes:
        - name: boot
          hostPath:
            path: /boot/
        - name: dev
          hostPath:
            path: /dev/
        - name: proc
          hostPath:
            path: /proc/
        - name: longhorn
          hostPath:
            path: /var/lib/longhorn/
        - name: longhorn-grpc-tls
          secret:
            secretName: longhorn-grpc-tls
            optional: true
      priorityClassName: "longhorn-critical"
      serviceAccountName: longhorn-service-account
  updateStrategy:
    rollingUpdate:
      maxUnavailable: "100%"
---
